--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,10 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
 ]
 dependencies = [
+    "omegaconf>=2.3.0",
     "psutil",
+    "pynput>=1.8.1",
+    "pyyaml>=6.0.3",
 ]
 
 [project.urls]
